# vehicle-classifier

./: .gitignore  Makefile  README.md  justfile  pyproject.toml
.github/workflows/: docs.yml
docs/: conf.py  index.rst  watch-doc.py
docs/_api/: acies.vehicle_classifier.base.rst
docs/source/: api.rst  conf.py  index.rst
docs/source/_api/: acies.vehicle_classifier.buffer.rst
models/: deepsense_config.yaml
source/: conf.py  index.rst
source/_api/: acies.vehicle_classifier.vfm.rst
src/acies/vehicle_classifier/: adaquant.py  base.py  buffer.py  deepsense.py  detector.py  diffphys.py  ds.py  example.py  foundationsense.py  neusymbolic.py  noise_detector.py  simple.py  spar.py  utils.py  utils_simple.py  vfm.py
src/acies/vehicle_classifier/simple_model/: final_model_v2_formation.pkl  final_model_v5_formation.pkl
