[project]
name = "acies-vehicle-classifier"
version = "0.2.0"
description = "Acies vehicle classifilers built with state-of-the-art models."
authors = [
    { name = "Jinyang Li", email = "jinyang7@illinois.edu" },
    { name = "Yizhuo Chen", email = "yizhuoc@illinois.edu" },
    { name = "Tianshi Wang", email = "tianshi34@illinois.edu" },
    { name = "Tommy Kimura", email = "tkimura4@illinois.edu" },
    { name = "Denizhan Kara", email = "kara4@illinois.edu" },
]
dependencies = [
    "numpy>=1.24.4",
    # "acies-py @ git+ssh://github.com/acies-os/acies-py.git",
    "acies @ https://github.com/acies-os/acies-os/releases/download/v2024.0621.041432/acies-0.1.0-cp38-abi3-macosx_11_0_arm64.whl ; platform_system == 'Darwin'",
    "acies @ https://github.com/acies-os/acies-os/releases/download/v2024.0621.041432/acies-0.1.0-cp38-abi3-manylinux_2_34_aarch64.whl ; platform_system == 'Linux' and platform_machine == 'aarch64'",
    # "vehicle-detection-baselines @ git+ssh://github.com/acies-os/vehicle-detection-baselines.git",
    "deepsense_augmented @ git+ssh://github.com/acies-os/deepsense-augmented.git",
    # "neusymbolic @ git+ssh://github.com/acies-os/neural-symbolic.git",
    "foundation-sense @ git+ssh://github.com/acies-os/FoundationSense.git",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
# acies-base-classifier = "acies.vehicle_classifier.base:main"
# acies-simple-classifier = "acies.vehicle_classifier.simple:main"
# acies-deepsense-classifier = "acies.vehicle_classifier.deepsense:main"
# acies-neusymbolic-classifier = "acies.vehicle_classifier.neusymbolic:main"
# acies-foundationsense-classifier = "acies.vehicle_classifier.foundationsense:main"
acies-vfm = "acies.vehicle_classifier.vfm:main"
acies-ds = "acies.vehicle_classifier.ds:main"

[tool.hatch.build.targets.wheel]
packages = ["src/acies"]

[tool.ruff]
line-length = 120
extend-select = ['Q', 'RUF100', 'C90', 'I']
flake8-quotes = { inline-quotes = 'single', multiline-quotes = 'double' }
mccabe = { max-complexity = 13 }
format = { quote-style = 'single' }
