[project]
name = "acies-vehicle-classifier"
version = "0.2.0"
description = "Acies vehicle classifilers built with state-of-the-art models."
authors = [
    { name = "Jinyang Li", email = "jinyang7@illinois.edu" },
    { name = "Yizhuo Chen", email = "yizhuoc@illinois.edu" },
    { name = "Tianshi Wang", email = "tianshi34@illinois.edu" },
    { name = "Tommy Kimura", email = "tkimura4@illinois.edu" },
    { name = "Denizhan Kara", email = "kara4@illinois.edu" },
]
dependencies = [
    "numpy>=1.24.4,<2.0",
    "acies @ https://github.com/acies-os/acies-os/releases/download/v0.2.2/acies-0.2.2-cp38-abi3-macosx_11_0_arm64.whl ; platform_system == 'Darwin'",
    "acies @ https://github.com/acies-os/acies-os/releases/download/v0.2.2/acies-0.2.2-cp38-abi3-manylinux_2_34_aarch64.whl ; platform_system == 'Linux' and platform_machine == 'aarch64'",
    "acies @ https://github.com/acies-os/acies-os/releases/download/v0.2.2/acies-0.2.2-cp38-abi3-manylinux_2_34_x86_64.whl ; platform_system == 'Linux' and platform_machine == 'x86_64'",
    # "vehicle-detection-baselines @ git+ssh://github.com/acies-os/vehicle-detection-baselines.git",
    "deepsense_augmented @ git+ssh://github.com/acies-os/deepsense-augmented.git",
    # "neusymbolic @ git+ssh://github.com/acies-os/neural-symbolic.git",
    "foundation-sense @ git+ssh://github.com/acies-os/FoundationSense.git",
    "scikit-learn>=1.5.1",
    "xgboost>=2.1.1",
    "scipy>=1.14.0",
    "matplotlib>=3.9.0",
    "pandas>=2.2.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
# acies-base-classifier = "acies.vehicle_classifier.base:main"
# acies-simple-classifier = "acies.vehicle_classifier.simple:main"
# acies-deepsense-classifier = "acies.vehicle_classifier.deepsense:main"
# acies-neusymbolic-classifier = "acies.vehicle_classifier.neusymbolic:main"
# acies-foundationsense-classifier = "acies.vehicle_classifier.foundationsense:main"
acies-vfm = "acies.vehicle_classifier.vfm:main"
acies-simple = "acies.vehicle_classifier.simple:main"
acies-ds = "acies.vehicle_classifier.ds:main"

[tool.hatch.build.targets.wheel]
packages = ["src/acies"]

[tool.ruff]
line-length = 120
lint.extend-select = ['Q', 'RUF100', 'C90', 'I']
lint.unfixable = ['F401']
lint.flake8-quotes = { inline-quotes = 'single', multiline-quotes = 'double' }
lint.mccabe = { max-complexity = 13 }
format = { quote-style = 'single' }
