[project]
name = "acies-vehicle-classifier"
version = "0.2.0"
description = "Acies vehicle classifilers built with state-of-the-art models."
authors = [
    { name = "Jinyang Li", email = "jinyang7@illinois.edu" },
    { name = "Shangchen Wu", email = "sw57@illinois.edu" },
    { name = "Yizhuo Chen", email = "yizhuoc@illinois.edu" },
    { name = "Tianshi Wang", email = "tianshi34@illinois.edu" },
    { name = "Tommy Kimura", email = "tkimura4@illinois.edu" },
    { name = "Denizhan Kara", email = "kara4@illinois.edu" },
]
dependencies = [
    "numpy>=1.24.4,<2.0",
    "acies @ https://github.com/acies-os/acies-os/releases/download/v0.2.2/acies-0.2.2-cp38-abi3-macosx_11_0_arm64.whl ; platform_system == 'Darwin'",
    "acies @ https://github.com/acies-os/acies-os/releases/download/v0.2.2/acies-0.2.2-cp38-abi3-manylinux_2_34_aarch64.whl ; platform_system == 'Linux' and platform_machine == 'aarch64'",
    "acies @ https://github.com/acies-os/acies-os/releases/download/v0.2.2/acies-0.2.2-cp38-abi3-manylinux_2_34_x86_64.whl ; platform_system == 'Linux' and platform_machine == 'x86_64'",
    "acies-buffers @ git+ssh://github.com/acies-os/buffers.git",
    "deepsense_augmented @ git+ssh://github.com/acies-os/deepsense-augmented.git",
    "foundation-sense @ git+ssh://github.com/acies-os/FoundationSense.git",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
acies-vfm = "acies.vehicle_classifier.vfm:main"
acies-ds = "acies.vehicle_classifier.ds:main"
acies-noise-detector = "acies.vehicle_classifier.noise_detector:main"

[tool.hatch.build.targets.wheel]
packages = ["src/acies"]

[tool.ruff]
line-length = 120
lint.extend-select = ['Q', 'RUF100', 'C90', 'I']
lint.unfixable = ['F401']
lint.flake8-quotes = { inline-quotes = 'single', multiline-quotes = 'double' }
lint.mccabe = { max-complexity = 13 }
format = { quote-style = 'single' }

[dependency-groups]
docs = [
    "livereload>=2.7.1",
    "pydata-sphinx-theme>=0.16.1",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinx-copybutton>=0.5.2",
    "sphinx>=8.1.3",
]
